# game-dice-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Google_benchmarks/: CMakeLists.txt
Google_benchmarks/benchmarks/: ActionsBenchmarks.cpp  DiceBenchmarks.cpp  DistributionFactoryBenchmarks.cpp  DynamicProbabilityTableBenchmarks.cpp  RoundingPoliciesBenchmarks.cpp  StaticProbabilityTableBenchmark.cpp  StaticProbabilityTableBenchmarks.cpp
Google_tests/: CMakeLists.txt
Google_tests/tests/: ActionsTest.cpp  ConstExprMathTest.cpp  DiceTest.cpp  DistributionFactoryTest.cpp  DynamicProbabilityTableTest.cpp  RoundingPoliciesTest.cpp  StaticProbabilityTableTest.cpp
docs/deep-dive/: functional-programming-and-data-oriented-design.md
docs/how-to/: run-benchmarks.md  run-clang-toolchain.md  run-fuzz-tests.md  run-tests.md
libfuzzer_tests/: CMakeLists.txt
libfuzzer_tests/fuzz_tests/: fuzz_actions_roll_dice.cpp  fuzz_dice.cpp
src/: Actions.h  ConstExprMath.h  Dice.h  DistributionFactory.h  DynamicProbabilityTable.h  ProbabilityTable.h  RoundingPolicies.h  StaticProbabilityTable.h
